--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,18 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.overflow {
+  height: 50% !important;
+  overflow: hidden;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.overflow .card-img-top {
+  transform: scale(1) !important;
+  transition: all 0.2s ease-in-out;
 }
-
-* {
-  box-sizing: border-box;
+.overflow .card-img-top:hover {
+  transform: scale(1.8) !important;
+}
+#nprogress .bar {
+  background: #ff5367 !important;
+}
+#nprogress .spinner-icon {
+  border-top-color: #ffbb00;
+  border-left-color: #ffbb00;
 }
