--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
   transition: all 0.2s ease-in-out;
 }
 .overflow .card-img-top:hover {
-  transform: scale(1.8) !important;
+  transform: scale(1.3) !important;
 }
 #nprogress .bar {
   background: #ff5367 !important;
@@ -15,4 +15,8 @@
 #nprogress .spinner-icon {
   border-top-color: #ffbb00;
   border-left-color: #ffbb00;
+}
+img{
+  max-width: 500px;
+  max-height: 300px;
 }
