Working on description

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
   border-top-color: #ffbb00;
   border-left-color: #ffbb00;
 }
-img{
-  max-width: 500px;
-  max-height: 300px;
+.footer{
+  height: 10%;
 }
+
