--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,13 @@ body {
 .email-icon{
   font-size: 70px
 }
+.d-flex{
+ display: flex !important;
+}
+
+@media screen and (max-width: 800px) {
+  .d-flex{
+    display: block !important;
+}
+}
+
