--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,7 +77,7 @@ body ::-webkit-scrollbar-thumb {
   min-height: -webkit-fit-content;
   min-height: -moz-fit-content;
   min-height: fit-content;
-  background-image: url('../assets/home/bg.jpg');
+  background-image: url('../public/assets/home/bg.jpg');
 }
 .profile-parent {
   display: flex;
@@ -131,7 +131,7 @@ body ::-webkit-scrollbar-thumb {
   height: 92%;
   width: 92%;
   border-radius: 50%;
-  background-image: url('../assets/home/profile-picture.jpg');
+  background-image: url('../public/assets/home/profile-picture.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
@@ -202,13 +202,13 @@ body ::-webkit-scrollbar-thumb {
   font-family: 'Poppins SemiBold';
   font-style: normal;
   font-weight: 400;
-  src: url('../assets/fonts/Poppins-SemiBold.ttf');
+  src: url('../public/assets/fonts/Poppins-SemiBold.ttf');
 }
 @font-face {
   font-family: 'Poppins Light';
   font-style: normal;
   font-weight: 400;
-  src: url('../assets/fonts/Poppins-Light.ttf');
+  src: url('../public/assets/fonts/Poppins-Light.ttf');
 }
 
 .home-container {
@@ -216,5 +216,5 @@ body ::-webkit-scrollbar-thumb {
   flex-direction: column;
   justify-content: space-between;
   min-height: 670px;
-  background-image: url('../assets/home/bg.jpg');
+  background-image: url('../public/assets/home/bg.jpg');
 }
