--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,23 @@
   min-height: 670px;
   background-image: url('../public/assets/home/bg.jpg');
 }
+
+body {
+  margin: 0;
+  overflow-y: overlay;
+  font-family: 'Poppins Regular';
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+::-webkit-scrollbar {
+  width: 6px !important;
+  height: 6px !important;
+}
+body ::-webkit-scrollbar-thumb {
+  background-color: hsla(0, 0%, 100%, 0.16);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+::-webkit-scrollbar-track {
+  background: hsla(0, 0%, 100%, 0.1);}
