--- a/styles/Header.css
+++ b/styles/Header.css
@@ -22,9 +22,9 @@
   align-items: center;
 }
 .header-option {
-  font-size: 16px;
+  font-size: 20px;
   cursor: pointer;
-  font-weight: 600;
+  font-weight: 800;
 }
 .header-hamburger {
   display: none;
@@ -59,6 +59,9 @@
     background-color: #1f2235;
     z-index: 1000;
     opacity: 0.5;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: 600;
   }
   .header-option-seperator {
     margin: 0;
