--- a/styles/Resume.css
+++ b/styles/Resume.css
@@ -76,9 +76,11 @@
   font-size: 12px;
 }
 .resume-details-carousal {
-  transition: -webkit-transform 1s ease-out;
-  transition: transform 1s ease-out;
-  transition: transform 1s ease-out, -webkit-transform 1s ease-out;
+  animation: fadeInAnimation 2s;
+}
+@keyframes fadeInAnimation{
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 .bullet-container {
   display: flex;
