--- a/styles/Header.css
+++ b/styles/Header.css
@@ -76,6 +76,15 @@
     color: var(--white);
   }
 }
+.show-hamburger-options {
+  left: 0px;
+  opacity: 1;
+}
+@media only screen and (max-width: 970px)
+.show-hamburger-options {
+    left: 0px;
+    opacity: 1;
+}
 @font-face {
   font-family: 'Poppins ExtraBold';
   font-style: normal;
