--- a/styles/Resume.css
+++ b/styles/Resume.css
@@ -65,7 +65,7 @@
 .resume-bullet-details {
   flex-grow: 1;
   width: 600px;
-  overflow: hidden;
+  overflow-y: scroll;
   padding: 0 0 0 80px;
 }
 .experience-description {
