--- a/styles/Resume.css
+++ b/styles/Resume.css
@@ -56,6 +56,7 @@
   display: flex;
   height: 360px;
   width: 1000px;
+  margin-bottom:80px;
 }
 .resume-bullets {
   box-shadow: 15px 0 9px -15px #1f2235;
