--- a/styles/Badge.css
+++ b/styles/Badge.css
@@ -1,26 +1,26 @@
 .badgr-badge {
   background-color: white;
-  border-radius: 20px ;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 10px;
   padding: 10px;
+  width: 300px;
+  height: 350px;
 }
 
 .badgr-badge-name {
   hyphens: auto;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  margin: 0;
+  margin: 0 10px 10px;
   font-size: 16px;
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
   line-height: 1.25;
   letter-spacing: normal;
-  text-align: left;
+  text-align: center;
   color: #05012c;
 }
 .badgr-badge-date {
@@ -45,7 +45,7 @@
 }
 
 .badgr-badge-recipient {
-  margin: 0;
+  margin-top: 10px;
   font-size: 12px;
   font-style: normal;
   font-stretch: normal;
@@ -67,17 +67,16 @@
   height: 16px;
   border-radius: 4px;
   border: solid 1px var(--black);
-  
+
   padding: 6px 16px;
   margin: 16px 0;
   color: black;
 }
-.badgr-badge-verify:hover{
+.badgr-badge-verify:hover {
   transition: all 0.2s ease-in-out;
   cursor: pointer;
   color: #f0f8ff;
   text-decoration: none;
   border: 1px solid var(--dark-orange);
   background-color: #1f2235;
-
 }
