--- a/styles/Profile.css
+++ b/styles/Profile.css
@@ -110,6 +110,7 @@
 .icon :hover {
   transition: 0.4s ease-out;
   transform: scale(1.2);
+  cursor: pointer;
 }
 @media only screen and (max-width: 1110px) {
   .profile-picture {
