adding work experience

--- a/styles/Resume.css
+++ b/styles/Resume.css
@@ -71,6 +71,7 @@
 .experience-description {
   margin: 10px 0 0;
   text-align: justify;
+  margin-bottom: 10px;
 }
 .resume-description-text {
   font-size: 12px;
