--- a/styles/AboutMe.css
+++ b/styles/AboutMe.css
@@ -24,15 +24,16 @@
 .highlighted-btn {
   color: var(--white);
   font-size: 12px;
-  background-color: #f5823;
+  background-color: #ff5823;
 }
+
 @media only screen and (max-width: 568px) {
   .highlighted-btn {
     z-index: -900;
   }
 }
 .fade-in {
-  //opacity: 0;
+  /* opacity: 0; */
   -webkit-transform: translateY(80px);
   transform: translateY(80px);
   transition: all 0.8s ease;
@@ -111,7 +112,8 @@
   padding: 30px;
 }
 .about-me-description {
-  font-size: 12px;
+  font-size: 13px;
+  font-weight: 450;
 }
 .about-me-highlights {
   margin: 80px 0;
