--- a/styles/Resume.css
+++ b/styles/Resume.css
@@ -218,6 +218,14 @@
 .resume-content {
   margin-top: 40px;
 }
+@media only screen and (max-width: 460px) {
+  .resume-screen-container{
+  width: 400px;
+  justify-content: space-evenly;
+  width: 100%;
+
+}
+}
 @media only screen and (max-width: 1110px) {
   .resume-card {
     width: 880px;
@@ -253,7 +261,7 @@
     padding: 0;
     width: -webkit-fit-content;
     width: -moz-fit-content;
-    width: fit-content;
+    width: 400px;
   }
   .resume-bullets {
     margin: 30px 0;
