--- a/styles/ContactMe.css
+++ b/styles/ContactMe.css
@@ -4,3 +4,15 @@
   background: var(--white);
   padding-top: 70px;
 }
+.central-form {
+  max-width: 1100px;
+  padding: 10px;
+  display: flex;
+  box-shadow: rgb(31 34 53) 0px 0px 20px -2px;
+  border-radius: 12px;
+  margin: 0px auto;
+  flex-direction: column;
+  justify-content: center;
+  color: var(--white);
+  background-color: rgb(31, 34, 53);
+}
