--- a/styles/ContactMe.css
+++ b/styles/ContactMe.css
@@ -178,3 +178,88 @@ form button:hover {
     font-size: 16px;
   }
 }
+
+/*! CSS Used from: https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css */
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+button {
+  border-radius: 0;
+}
+button:focus {
+  outline: 1px dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+button {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+button {
+  overflow: visible;
+}
+button {
+  text-transform: none;
+}
+button {
+  -webkit-appearance: button;
+}
+button::-moz-focus-inner {
+  padding: 0;
+  border-style: none;
+}
+@media print {
+  *,
+  ::after,
+  ::before {
+    text-shadow: none !important;
+    box-shadow: none !important;
+  }
+}
+.scroll-container {
+  position: absolute;
+  text-align: center;
+  right: 0;
+  margin-right: 9px;
+  overflow: hidden;
+  flex-direction: column;
+  margin-top: -45px;
+  z-index: 100;
+  cursor: pointer;
+}
+@media only screen and (min-width: 475px) {
+  .scroll-container {
+    margin-bottom: 10px;
+  }
+}
+.btn-scroll {
+  width: 50px;
+  height: 50px;
+  color: #f0f8ff;
+  font-size: 24px;
+  background-color: tomato;
+  border-radius: 10px;
+  border: none;
+}
+.arrow:hover {
+  transform: rotate(1turn);
+  transform: rotate(1turn);
+  color: #f0f8ff;
+}
+.arrow {
+  animation: mover 0.5s infinite alternate;
+  animation: mover 0.5s infinite alternate;
+}
+@keyframes mover {
+  to {
+    transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+  0% {
+    transform: translateX(0);
+    transform: translateX(0);
+  }
+}
