--- a/styles/Profile.css
+++ b/styles/Profile.css
@@ -7,7 +7,7 @@
   font-family: 'Poppins SemiBold';
 }
 .btn:active {
-  -webkit-transform: translateY(2px);
+  transform: translateY(2px);
   transform: translateY(2px);
 }
 .primary-btn {
