--- a/styles/AboutMe.css
+++ b/styles/AboutMe.css
@@ -33,9 +33,15 @@
   }
 }
 .fade-in {
-  /* opacity: 0; */
+  opacity: 0;
   transform: translateY(80px);
   transform: translateY(80px);
+  transition: all 0.8s ease;
+}
+.appear {
+  opacity: 1;
+  transform: translateY(0px);
+  transform: translateY(0px);
   transition: all 0.8s ease;
 }
 .heading-container {
@@ -87,7 +93,7 @@
   justify-content: center;
   align-items: center;
   margin: 0 0 50px;
-  margin-top: -84px;
+  margin-top: -5px;
 }
 .about-me-parent {
   max-width: 1000px;
