--- a/styles/AboutMe.css
+++ b/styles/AboutMe.css
@@ -140,6 +140,14 @@
 .about-me-options .highlighted-btn {
   margin: 0 0 0 0;
 }
+.link{
+  text-decoration: none;
+  color:  var(#1f2235);
+  font-weight: bold;
+}
+.link:hover{
+  color: var(--dark-orange);
+}
 @media only screen and (max-width: 1110px) {
   .about-me-parent {
     width: 88%;
