--- a/styles/Header.css
+++ b/styles/Header.css
@@ -90,3 +90,22 @@
   font-weight: 400;
   src: url('../public/assets/fonts/Poppins-ExtraBold.ttf');
 }
+.language-container{
+  display: flex;
+  color: var(--white);
+  justify-content: flex-end ;
+  align-items: center;
+  margin-right: 20px;
+  margin-top: 10px;
+  
+}
+.language-options{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  color: aliceblue;
+  cursor: pointer;
+  margin-right: 20px;
+  margin-top: 10px;
+}
