--- a/styles/Header.css
+++ b/styles/Header.css
@@ -1,7 +1,7 @@
 .header-container {
   display: flex;
   justify-content: center;
-  height: 149px;
+  height: 110px;
   color: var(--white);
 }
 .header-parent {
@@ -90,22 +90,31 @@
   font-weight: 400;
   src: url('../public/assets/fonts/Poppins-ExtraBold.ttf');
 }
-.language-container{
+.language-container {
   display: flex;
   color: var(--white);
-  justify-content: flex-end ;
+  justify-content: flex-end;
   align-items: center;
-  margin-right: 20px;
-  margin-top: 10px;
-  
+  margin-right: 50px;
+  height: 30px;
+  z-index: 1000;
 }
-.language-options{
+.language-options {
   display: flex;
   flex-direction: column;
+  gap: 10px;
   align-items: flex-end;
   justify-content: center;
   color: aliceblue;
   cursor: pointer;
-  margin-right: 20px;
+  margin-right: 30px;
   margin-top: 10px;
+  z-index: 999;
+}
+.language-option {
+  font-size: 15px;
+  font-weight: 600;
+}
+.language-option:nth-child(2) {
+  margin-right: 2px;
 }
