--- a/styles/Header.css
+++ b/styles/Header.css
@@ -118,3 +118,24 @@
 .language-option:nth-child(2) {
   margin-right: 2px;
 }
+@keyframes inAnimation {
+    0% {
+        transform: scaleY(0)
+    }
+    80% {
+        transform: scaleY(1.1)
+    }
+    100% {
+        transform: scaleY(1)
+    }
+}
+
+@keyframes outAnimation {
+  20% {
+    transform: scaleY(1.1);
+  }
+  100% {
+    transform: scaleY(0);
+    opacity: 0;
+  }
+}
