--- a/styles/Projects.css
+++ b/styles/Projects.css
@@ -63,32 +63,10 @@
 
 .box {
 display: flex;
+flex-direction: column;
 justify-content: center;
 align-items: center;
 height: 100%;
-}
-
-.diamond {
-display: flex;
-justify-content: center;
-align-items: center;
-position: relative;
-z-index: 2;
-width: 50px;
-height: 50px;
-border-radius: 5px;
-border: 1px solid #ffffff;
-box-shadow: 1px 1px 0px rgba(0,0,0,0.2);
-background-image: linear-gradient(to top left, #ddd 0%, #fff 100%);
-text-align: center;
-transform-origin: center;
-transform: rotateZ(45deg);
-transition: box-shadow 250ms, transform 250ms;
-}
-
-.diamond span {
-font-weight: bold;
-transform: rotateZ(-45deg)
 }
 
 .grid .item:hover .diamond,
@@ -126,6 +104,7 @@ outline: 2px solid #3eabfa;
 .grid .item:nth-child(2)  { background-image: linear-gradient(45deg, var(--orange) 0%, #1f2235 60%); }
 .grid .item:nth-child(3)  { background-image: linear-gradient(45deg, var(--orange) 0%, #1f2235 60%); }
 .grid .item:nth-child(4)  { background-image: linear-gradient(45deg, var(--orange) 0%, #1f2235 60%); }
+
 .grid .item:nth-child(5),
 .grid .item:nth-child(6),
 .grid .item:nth-child(7),
@@ -136,3 +115,22 @@ outline: 2px solid #3eabfa;
 .grid .item:nth-child(12),
 .grid .item:nth-child(13),
 .grid .item:nth-child(14) { background-image: linear-gradient(45deg, var(--orange) 0%, var(--dark-orange) 60%); }
+
+.image{
+  width: 100%;
+  height: 100%;
+  object-fit:fill
+}
+.img-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media(max-width: 800px) {
+  .image {
+    width:200px;
+  height: 200px;
+  }
+}
