--- a/styles/Projects.css
+++ b/styles/Projects.css
@@ -1,136 +1,125 @@
-
-.grid {
+.container {
   display: grid;
-  grid-gap: 1.5vw;
-  min-height: 100vh;
-  padding: 1.5vw;
+  grid-template-columns: 1fr repeat(12, minmax(auto, 60px)) 1fr;
+  grid-gap: 40px;
 }
 
-.grid {
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 50vh 30vh repeat(7, minmax(20vh, 1fr));
-  grid-template-areas:
-    "hero   hero"
-    "big1   big1"
-    "med1   med1"
-    "med2   med2"
-    "small1 small2"
-    "small3 small4"
-    "small5 small6"
-    "small7 small8"
-    "small9 small10";
+.cards {
+  grid-column: 2 / span 12;
+  display: grid;
+  grid-template-columns: repeat(12, minmax(auto, 60px));
+  grid-gap: 40px;
 }
 
-@media screen and (min-width: 750px) {
-  .grid {
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 25vh);
-    grid-template-areas:
-      "hero   hero   hero   med1   med1"
-      "hero   hero   hero   med2   med2"
-      "big1   big1   big1   big1   big1"
-      "small1 small2 small3 small4 small5"
-      "small6 small7 small8 small9 small10";
-  }
-}
-
-@media screen and (min-width: 1400px) {
-  .grid {
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: auto;
-    grid-template-areas:
-    "small1 hero   hero hero med1   med1"
-    "small2 hero   hero hero med2   med2"
-    "small3 small5 big1 big1 small7 small8"
-    "small4 small6 big1 big1 small9 small10";
-  }
-}
-
-.grid .item:nth-child(1)  { grid-area: hero; }
-.grid .item:nth-child(2)  { grid-area: big1; }
-.grid .item:nth-child(3)  { grid-area: med1; }
-.grid .item:nth-child(4)  { grid-area: med2; }
-.grid .item:nth-child(5)  { grid-area: small1; }
-.grid .item:nth-child(6)  { grid-area: small2; }
-.grid .item:nth-child(7)  { grid-area: small3; }
-.grid .item:nth-child(8)  { grid-area: small4; }
-.grid .item:nth-child(9)  { grid-area: small5; }
-.grid .item:nth-child(10) { grid-area: small6; }
-.grid .item:nth-child(11) { grid-area: small7; }
-.grid .item:nth-child(12) { grid-area: small8; }
-.grid .item:nth-child(13) { grid-area: small9; }
-.grid .item:nth-child(14) { grid-area: small10; }
-
-.box {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-height: 100%;
-}
-
-.grid .item:hover .diamond,
-.grid .item:focus .diamond {
-box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
-transform:  rotateZ(45deg) scale(1.2);
-}
-
-.grid .item:hover .tooltip,
-.grid .item:focus .tooltip {
-opacity: 1;
-transform: translateY(70px);
-}
-
-.grid .item {
-position: relative;
-padding: 1vw;
-background-position:  left bottom;
-background-size: 150% 100%;
-transition: background 500ms, outline 500ms;
-background-position: top left;
-outline: transparent;
-}
-
-.grid .item:hover,
-.grid .item:focus {
-background-position: top right;
-}
-
-.grid .item:focus {
-outline: 2px solid #3eabfa;
-}
-
-.grid .item:nth-child(1)  { background-image: linear-gradient(45deg, var(--orange) 0%, #1f2235 60%); }
-.grid .item:nth-child(2)  { background-image: linear-gradient(45deg, var(--orange) 0%, #1f2235 60%); }
-.grid .item:nth-child(3)  { background-image: linear-gradient(45deg, var(--orange) 0%, #1f2235 60%); }
-.grid .item:nth-child(4)  { background-image: linear-gradient(45deg, var(--orange) 0%, #1f2235 60%); }
-
-.grid .item:nth-child(5),
-.grid .item:nth-child(6),
-.grid .item:nth-child(7),
-.grid .item:nth-child(8),
-.grid .item:nth-child(9),
-.grid .item:nth-child(10),
-.grid .item:nth-child(11),
-.grid .item:nth-child(12),
-.grid .item:nth-child(13),
-.grid .item:nth-child(14) { background-image: linear-gradient(45deg, var(--orange) 0%, var(--dark-orange) 60%); }
-
-.image{
-  width: 100%;
-  height: 100%;
-  object-fit:fill
-}
-.img-container{
-  width: 100%;
-  height: 100%;
+.card {
+  position: relative;
+  grid-column-end: span 4;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  background-color: #39393b;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+.card:hover {
+  transform: translateY(-7px);
+}
+
+.card-image-container {
+  width: 100%;
+  padding-top: 56.25%;
+  overflow: hidden;
+  position: relative;
+}
+
+.card-image-container img {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.card-content {
+  padding: 20px;
+}
+
+.card-title {
+  font-family: 'Poppins SemiBold';
+  text-align: center;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  color: var(--white);
+  margin-bottom: 20px;
+}
+
+.card-info {
+  display: flex;
+  align-self: end;
   align-items: center;
 }
-@media(max-width: 800px) {
-  .image {
-    width:200px;
-  height: 200px;
+
+.card-description {
+  margin-top : 10px;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  color: var(--white);
+  
+  padding: 5px 20px;
+  background-color: #303032;
+  border-radius: 10px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .card {
+    grid-column-end: span 6;
   }
+}
+
+@media only screen and (max-width: 700px) {
+  .container {
+    grid-gap: 20px;
+  }
+  .card {
+    grid-column-end: span 12;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .container {
+    grid-template-columns: 10px repeat(6, 1fr) 10px;
+    grid-gap: 10px;
+  }
+  .cards {
+    grid-column: 2 / span 6;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 20px;
+  }
+  .card {
+    grid-column-end: span 6;
+  }
+}
+.button-container{
+  position: absolute;
+  right: 0;
+  display: flex;
+  margin: 10px;
+}
+.date-container{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+.date{
+  padding-top: 10px;
+  font-size: 11px;
+  line-height: 20px;
+  font-weight: 400;
+  margin-bottom:auto;
+  color: var(--white);
 }
