--- a/styles/Projects.css
+++ b/styles/Projects.css
@@ -1,5 +1,6 @@
 .container {
   display: grid;
+  margin-top: 20px;
   grid-template-columns: 1fr repeat(12, minmax(auto, 60px)) 1fr;
   grid-gap: 40px;
 }
@@ -16,7 +17,7 @@
   grid-column-end: span 4;
   display: flex;
   flex-direction: column;
-  background-color: #39393b;
+  background-color: #2C2E44;
   cursor: pointer;
   transition: all 0.3s ease 0s;
 }
@@ -63,12 +64,10 @@
 .card-description {
   margin-top : 10px;
   font-size: 14px;
-  line-height: 20px;
   font-weight: 400;
   color: var(--white);
-  
-  padding: 5px 20px;
-  background-color: #303032;
+  padding: 5px 15px;
+  background-color: #1f2235;
   border-radius: 10px;
 }
 
