--- a/styles/Projects.css
+++ b/styles/Projects.css
@@ -33,14 +33,13 @@
   position: relative;
 }
 
-.card-image-container img {
+.card-image {
   width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
 .card-content {
   padding: 20px;
 }
