--- a/styles/Profile.css
+++ b/styles/Profile.css
@@ -1,7 +1,8 @@
 .btn {
   border-radius: 50px;
   padding: 14px 0;
-  width: 160px;
+  margin: 0 0 0 28px;
+  width: 140px;
   cursor: pointer;
   transition: 0.2s;
   font-family: 'Poppins SemiBold';
@@ -111,6 +112,11 @@
   transition: 0.4s ease-out;
   transform: scale(1.2);
   cursor: pointer;
+}
+.cv-option {
+  margin: 0 0 0.2rem 0;
+  cursor: pointer;
+  font-size: 12px;
 }
 @media only screen and (max-width: 1110px) {
   .profile-picture {
