--- a/styles/Profile.css
+++ b/styles/Profile.css
@@ -85,20 +85,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 1px 0 0 var(--white);
+  box-shadow: 0 1px 0 0.5px var(--white);
   border-radius: 50%;
   height: 380px;
   width: 380px;
   margin: 0 0 100px;
 }
 .profile-picture-background {
-  height: 92%;
-  width: 92%;
+  display: block;
+  width: 93%;
+  height: 93%;
   border-radius: 50%;
-  background-image: url('../public/assets/home/profile-picture.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
+}
+.profile-picture-image {
+  border-radius: 50%;
 }
 .profile-picture-background:hover {
   transform: scale(1.07);
