--- a/styles/Header.css
+++ b/styles/Header.css
@@ -80,9 +80,11 @@
   left: 0px;
   opacity: 1;
 }
-@media only screen and (max-width: 970px) .show-hamburger-options {
-  left: 0px;
-  opacity: 1;
+@media only screen and (max-width: 970px) {
+  .show-hamburger-options {
+    left: 0px;
+    opacity: 1;
+  }
 }
 @font-face {
   font-family: 'Poppins ExtraBold';
@@ -119,15 +121,15 @@
   margin-right: 2px;
 }
 @keyframes inAnimation {
-    0% {
-        transform: scaleY(0)
-    }
-    80% {
-        transform: scaleY(1.1)
-    }
-    100% {
-        transform: scaleY(1)
-    }
+  0% {
+    transform: scaleY(0);
+  }
+  80% {
+    transform: scaleY(1.1);
+  }
+  100% {
+    transform: scaleY(1);
+  }
 }
 
 @keyframes outAnimation {
