--- a/styles/Resume.css
+++ b/styles/Resume.css
@@ -102,7 +102,7 @@
   margin: 15px 0;
   padding: 0 8px;
   border-radius: 20px;
-  width: 30px;
+  width: 16px;
   transition: width 0.6s ease;
 }
 .bullet-label {
@@ -111,8 +111,10 @@
   font-family: 'Poppins SemiBold';
 }
 .bullet-logo {
-  height: 16px;
+  height: 16px !important;
+  width: 16px !important;
   margin: 0 30px 0 0;
+  flex-shrink: 0;
 }
 .bullet-icons {
   width: 34px;
