Refactor styles: Consolidate CSS files and restructure layout
- Removed individual style imports in layout.tsx and replaced with a single main.css import.
- Created new base styles (_gobal.css, _reset.css, _variables.css) for global styling.
- Added component-specific styles for About Me, Profile, Resume, Badges, Badge, Contact Me, and Projects.
- Introduced layout styles for Header and Footer.
- Deleted old globals.css and organized styles into a more modular structure.
- Updated _projects.css to enhance card layout and responsiveness.

--- a/styles/components/_aboutMe.css
+++ b/styles/components/_aboutMe.css
@@ -111,7 +111,7 @@
 }
 .about-me-profile {
   width: 50%;
-  background-image: url('../public/assets/home/aboutMe.jpeg');
+  background-image: url('../../public/assets/home/aboutMe.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 25%;
@@ -181,13 +181,13 @@
   font-family: 'Poppins SemiBold';
   font-style: normal;
   font-weight: 400;
-  src: url('../public/assets/fonts/Poppins-SemiBold.ttf');
+  src: url('../../public/assets/fonts/Poppins-SemiBold.ttf');
   font-display: swap;
 }
 @font-face {
   font-family: 'Poppins Bold';
   font-style: normal;
   font-weight: 400;
-  src: url('../public/assets/fonts/Poppins-Bold.ttf');
+  src: url('../../public/assets/fonts/Poppins-Bold.ttf');
   font-display: swap;
 }
