--- a/styles/layout/_header.css
+++ b/styles/layout/_header.css
@@ -90,7 +90,7 @@
   font-family: 'Poppins ExtraBold';
   font-style: normal;
   font-weight: 400;
-  src: url('../public/assets/fonts/Poppins-ExtraBold.ttf');
+  src: url('../../public/assets/fonts/Poppins-ExtraBold.ttf');
 }
 .language-container {
   display: flex;
