--- a/styles/components/_aboutMe.css
+++ b/styles/components/_aboutMe.css
@@ -131,12 +131,14 @@
 .highlight {
   display: flex;
   align-items: center;
-  margin: 5px 0;
+  margin: 10px 0;
   font-size: 12px;
+  font-size: 13px;
+  font-weight: 450;
 }
 .highlight-blob {
-  height: 12px;
-  width: 12px;
+  height: 10px;
+  width: 10px;
   margin: 0 10px 0 0;
   background-color: #ff5823;
   border-radius: 50%;
