feat: add LoadingBar component and integrate it into Resume loading state; include styles for loading animation

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,3 +11,4 @@
 @import './components/_badge.css';
 @import './components/_contactMe.css';
 @import './pages/_projects.css';
+@import './components/_loadingBar.css';
