--- a/styles/components/_resume.css
+++ b/styles/components/_resume.css
@@ -135,6 +135,8 @@
 .resume-screen-container {
   display: flex;
   flex-direction: column;
+  margin-bottom: 30px;
+
 }
 .resume-main-heading {
   position: relative;
@@ -144,7 +146,7 @@
 }
 .resume-main-heading span {
   color: var(--dark-orange);
-  font-size: 16px;
+  font-size: 20px;
   font-family: 'Poppins SemiBold';
   margin-bottom: 15px;
 }
@@ -165,15 +167,18 @@
   cursor: pointer;
 }
 .resume-sub-heading {
-  font-size: 13px;
+  font-size: 15px;
   font-family: 'Poppins SemiBold';
   color: var(--black);
   margin: -5px 10px 0px;
+  margin-bottom: 15px;
 }
 .resume-heading-description {
-  font-size: 12px;
+  font-size: 13px;
   text-align: justify;
   margin: -5px 15px 15px;
+  margin-top: 10px; /* Más espacio antes de la descripción */
+  line-height: 1.5;
 }
 .heading-date {
   background-color: #ff5823;
